--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 matplotlib = "^3.9.1"
-opencv-python = "^4.10.0.84"
+#opencv-python = "^4.10.0.84"
+opencv-python = "^4.8"
 typer = "^0.12.3"
 onnxruntime-gpu = {version = "^1.18.1", source = "onnxruntime-gpu-src"}
 
